# Gallery

./: meson.build  org.gnome.Gallery.json
data/: meson.build  org.gnome.Gallery.appdata.xml.in  org.gnome.Gallery.desktop.in  org.gnome.Gallery.gresource.xml  org.gnome.Gallery.gschema.xml
data/icons/: meson.build
data/ui/: gallery_view_page.ui  image-widget.ui  image_view_page.ui  image_widget.ui  window.cmb  window.cmb.ui  window.ui
gallery/: gallery.in  library.py  main.py  meson.build  window.py
gallery/widgets/: gallery_view_page.py  image_view_page.py  image_widget.py
po/: POTFILES  meson.build
